# giflib

./: CMakeLists.txt
doc/: gif2rgb.html  gif_lib.html  gif_lib.xml  gifbg.1  gifbg.html  gifbg.xml  gifbuild.1  gifbuild.html  gifbuild.xml  gifclrmp.html  gifcolor.html  gifecho.html  giffilter.html  giffix.html  gifhisto.1  gifhisto.html  gifhisto.xml  gifinto.1  gifinto.html  giflib.7  giflib.html  giflib.xml  gifsponge.html  giftext.html  giftool.1  giftool.html  giftool.xml  gifwedge.1  gifwedge.html  gifwedge.xml  intro.html  intro.xml
doc/gifstandard/: GIF89a.html  LZW-and-GIF-explained.html
doc/whatsinagif/: animation_and_transparency.html  bits_and_bytes.html  lzw_image_data.html
tests/: fire.dmp  welcome2.dmp
